[package]
name = "digest-hash"
version = "0.3.0"
description = "Cryptography-grade data structure hashing"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/mzabaluev/digest-hash-rs"
readme = "README.md"
categories = ["cryptography", "data-structures"]
keywords = ["crypto", "digest", "hash", "endianness"]

[badges]
circle-ci = { repository = "mzabaluev/digest-hash-rs" }
codecov = { repository = "mzabaluev/digest-hash-rs" }

[dependencies]
digest = "0.8"
byteorder = "1.2"

[dev-dependencies]
sha2 = "0.8"
